# playa

./: .flake8  .gitignore  .gitmodules  CHANGELOG.md  README.md  TODO.md  foo.py  latency_stats.txt  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: benchmarks.yml  build_wheels.yml  deploy_docs.yml  release.yml  tests.yml  thirdparty.yml
0.2.10/: 404.html  index.html  objects.inv  sitemap.xml
0.2.10/cli/: index.html
0.2.10/reference/: index.html
0.2.9/: 404.html  index.html  sitemap.xml
0.2.9/cli/: index.html
0.2.9/reference/: index.html
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/cli/: index.html
0.3.0/reference/: index.html
0.3.2/: 404.html  index.html  objects.inv  sitemap.xml
0.3.2/cli/: index.html
0.3.2/reference/: index.html
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.1/: 404.html  index.html  objects.inv  sitemap.xml
0.4.2/: 404.html  index.html  objects.inv  sitemap.xml
0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
0.5.1/: 404.html  index.html  objects.inv  sitemap.xml
0.6.0/: 404.html  index.html  objects.inv  sitemap.xml
0.6.1/: 404.html  index.html  sitemap.xml
0.6.2/: 404.html  index.html  objects.inv  sitemap.xml
0.6.3/: 404.html  index.html  objects.inv  sitemap.xml
0.6.4/: 404.html  index.html  objects.inv  sitemap.xml
0.6.5/: 404.html  index.html  objects.inv  sitemap.xml
0.6.6/: 404.html  index.html  objects.inv  sitemap.xml
0.7.0/: 404.html  index.html  objects.inv  sitemap.xml
0.8.0/: 404.html  index.html  objects.inv  sitemap.xml
0.8.1/: 404.html  index.html  objects.inv  sitemap.xml
0.9.0/: 404.html  index.html  sitemap.xml
benchmarks/: arcfour.py  benchmark.sh  converter.py  latency.py  many_objects.py  miner.py  objects.py  parallel.py  parallel_miner.py  parser.py  png_predict.py  structure.py  text.py
docs/: data.md  reference.md
notebooks/: internal_links.ipynb  links.ipynb  outline.ipynb  styled-text.ipynb  svg-complex.ipynb  svg.ipynb
playa/: __init__.py  _saslprep.py  arcfour.py  ascii85.py  ccitt.py  cli.py  cmapdb.py  color.py  content.py  converter.py  data_structures.py  document.py  encodingdb.py  exceptions.py  font.py  fontmetrics.py  fontprogram.py  glyphlist.py  image.py  interp.py  jbig2.py  layout.py  lzw.py  metadata.py  miner.py  models.py  outline.py  page.py  parser.py  pdfcolor.py  pdfdevice.py  pdfdocument.py  pdfexceptions.py  pdffont.py  pdfinterp.py  pdfpage.py  pdfparser.py  pdfstructtree.py  pdftypes.py  psparser.py  (+6 more)
samples/: character_spacing_glyphs.json  character_spacing_texts.json  pie.odt
tests/: benchmark_convert.py  benchmark_parser.py  data.py  latency_stats.py  test_bears.py  test_cli.py  test_cmapdb.py  test_data_structures.py  test_document.py  test_encodingdb.py  test_fonts.py  test_indirect_objects.py  test_inirect_objects.py  test_interp.py  test_lazy_api.py  test_lexer.py  test_miner.py  test_object_parser.py  test_open.py  test_outline.py  test_page.py  test_parallel.py  test_parser.py  test_pdfdocument.py  test_pdfminer_crypto.py  test_pdfminer_psparser.py  test_pdfparser.py  test_pdfstructtree.py  test_pdftypes.py  test_psparser.py  test_structtree.py  test_structure.py  test_text.py  test_utils.py  test_xref.py
tools/: conv_afm.py  create_json_schema.py
v0.10.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.10.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.11.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.1.0/: 404.html  index.html  objects.inv  sitemap.xml
(+85 files in other folders)
