[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "playa"
dynamic = ["version"]
description = "PDF parser and analyzer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Yusuke Shinyama + Philippe Guglielmetti", email = "pdfminer@goulu.net" },
    { name = "David Huggins-Daines", email = "dhd@ecolingui.ca" },
]
keywords = [
    "layout analysis",
    "pdf parser",
    "text mining",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]
dependencies = [
    "charset-normalizer >= 2.0.0",
    "cryptography >= 36.0.0",
]

[project.urls]
Homepage = "https://github.com/dhdaines/playa"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["playa"]

[tool.ruff]
namespace-packages = ["playa"]

[tool.ruff.lint]
extend-select = [
    "W",  # pycodestyle warnings
    "I",  # isort
    "TID"  # flake8 tidy imports
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
